--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  <ImageView
+      android:id="@+id/imageView"
+      android:layout_width="150dp"
+      android:layout_height="150dp"
+      android:layout_marginTop="100dp"
+      android:layout_marginBottom="500dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.498"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/pseudogenlogo" />
+
+  <Button
+      android:id="@+id/emailButton"
+      android:layout_width="250dp"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="135dp"
+      android:layout_marginBottom="307dp"
+      android:adjustViewBounds="true"
+      android:drawableLeft="@drawable/emailsignin"
+      android:onClick="signInWithEmailClicked"
+      android:padding="20dp"
+      android:scaleType="centerInside"
+      android:text="Sign In With Email"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+  <Button
+      android:id="@+id/googleButton"
+      android:layout_width="250dp"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="62dp"
+      android:layout_marginBottom="197dp"
+      android:adjustViewBounds="true"
+      android:drawableLeft="@drawable/googlesignin"
+      android:padding="20dp"
+      android:scaleType="centerInside"
+      android:text="Sign In With Google"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/emailButton" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
