--- a/app/src/main/res/layout/activity_email_sign_in.xml
+++ b/app/src/main/res/layout/activity_email_sign_in.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="121dp"
         android:layout_marginBottom="510dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,7 +17,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/pseudogenlogo" />
+        app:srcCompat="@drawable/psglogo" />
 
     <EditText
         android:id="@+id/usernameEditText"
