Added bottom navigation and changed look and feel of the app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         android:fontFamily="@font/audiowide"
         android:text="pseudoGen"
         android:textAlignment="center"
-        android:textSize="48sp"
+        android:textSize="38dp"
         app:layout_constraintBottom_toTopOf="@+id/loadingImageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
