--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="app_blue">#006699</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_grey">#B8B8B8</color>
 </resources>
