--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -7,16 +7,18 @@
     tools:context=".CentralActivity">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_nav_menu"
-        app:theme="@style/Widget.BottomNavigationView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:itemBackground="@color/black"
         app:itemIconTint="@android:color/white"
         app:itemTextAppearanceActive="@style/Widget.BottomNavigationView"
         app:itemTextColor="@color/app_blue"
-        app:labelVisibilityMode="labeled" />
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu"
+        app:theme="@style/Widget.BottomNavigationView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
