--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,9 +13,15 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-
+    <!-- Bottom Navigation Style -->
     <style name="Widget.BottomNavigationView"
         parent="Widget.Design.BottomNavigationView">
         <item name="fontFamily">@font/audiowide</item>
     </style>
+
+    <!-- List View Style -->
+    <style name="Widget.AppCompat.NewListView" parent="Widget.AppCompat.ListView">
+        <item name="android:background">@color/dull_blue</item>
+    </style>
+
 </resources>
