--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="app_blue">#006699</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_grey">#B8B8B8</color>
+    <color name="dull_blue">#4f4944</color>
 </resources>
