--- a/app/src/main/res/layout/activity_code_list.xml
+++ b/app/src/main/res/layout/activity_code_list.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -24,16 +25,12 @@
 
     <ListView
         android:id="@+id/codesListview"
-        android:layout_width="0dp"
-        android:layout_height="656dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="15dp"
-        app:theme="@style/Widget.AppCompat.NewListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:theme="@style/Widget.AppCompat.NewListView"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
