--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_grey">#B8B8B8</color>
     <color name="dull_blue">#4f4944</color>
+    <color name="dull_yellow">#ffff84</color>
+    <color name="pale">#fff9d0</color>
+    <color name="bright_orange">#FFA500</color>
 </resources>
