--- a/app/src/main/res/layout/activity_email_sign_in.xml
+++ b/app/src/main/res/layout/activity_email_sign_in.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/background_gradient"
     android:layout_height="match_parent"
     tools:context=".EmailSignInActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/logoImageView"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="121dp"
@@ -17,7 +18,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/psglogo" />
+        app:srcCompat="@drawable/pigeonlogo" />
 
     <EditText
         android:id="@+id/usernameEditText"
