--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,21 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ic_launcher_background"
+    android:background="@drawable/background_gradient"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/logoImageView"
-        android:layout_width="167dp"
-        android:layout_height="248dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginBottom="360dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="500dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/psglogo" />
+        app:srcCompat="@drawable/pigeonlogo" />
 
     <ImageView
         android:id="@+id/loadingImageView"
@@ -42,7 +42,8 @@
         android:fontFamily="@font/audiowide"
         android:text="pseudoGen"
         android:textAlignment="center"
-        android:textSize="38dp"
+        android:textColor="#FFFFFF"
+        android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/loadingImageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
