--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,17 +3,30 @@
     <style name="Theme.PseudoGen" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/app_blue</item>
-        <item name="fontFamily">@font/audiowide</item>
-        <item name="colorPrimaryVariant">@color/app_blue </item>
-        <item name="colorOnPrimary">@color/bright_orange</item>
+        <item name="colorPrimaryVariant">@color/indigo</item>
+        <item name="colorOnPrimary">@color/white</item>
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/bright_orange</item>
-        <item name="colorSecondaryVariant">@color/light_grey</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/app_blue</item>
+        <item name="colorSecondaryVariant">@color/indigo</item>
+        <item name="colorOnSecondary">@color/bright_orange</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@drawable/background_gradient</item>
+        <item name="buttonStyle">@style/Widget.AppCompat.Button.Borderless</item>
+        <item name="fontFamily">@font/audiowide</item>
+
     </style>
+
+    <!-- Action Bar Style -->
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <!-- Bottom Navigation Style -->
     <style name="Widget.BottomNavigationView"
         parent="Widget.Design.BottomNavigationView">
@@ -30,10 +43,6 @@
     <!-- Edit Text Style -->
     <style name="Widget.AppCompat.NewEditText" parent="Widget.AppCompat.EditText">
         <item name="fontFamily">@font/fira_mono</item>
-        <item name="android:textColor">@color/bright_orange</item>
     </style>
 
-    <style name="AppTheme.FullBackground" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:background">@color/dull_blue</item>
-    </style>
 </resources>
