Added tabbed activity for code editor. Added fragments for code editor and analysis. TODO: Delete obsolete CodeEditorActivity as fragments are being used

--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -11,10 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="@color/black"
         app:itemBackground="@color/black"
         app:itemIconTint="@android:color/white"
         app:itemTextAppearanceActive="@style/Widget.BottomNavigationView"
-        app:itemTextColor="@color/app_blue"
+        app:itemTextColor="@color/light_grey"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
