--- a/app/src/main/res/layout/activity_code_list.xml
+++ b/app/src/main/res/layout/activity_code_list.xml
@@ -13,9 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:itemBackground="@color/black"
+        android:background="@color/black"
         app:itemIconTint="@android:color/white"
         app:itemTextAppearanceActive="@style/Widget.BottomNavigationView"
-        app:itemTextColor="@color/app_blue"
+        app:itemTextColor="@color/light_grey"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
