--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:id="@+id/action_home"
         android:enabled="true"
         android:title="Home"
         android:icon="@drawable/home_icon"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_code"
         android:enabled="true"
+        android:layout_width="fill_parent"
         android:title="Code"
         android:icon="@drawable/code_icon"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/action_analysis"
-        android:enabled="true"
-        android:title="Analysis"
-        android:icon="@drawable/analysis_icon"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom" />
 </menu>
