--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="app_blue">#05203b</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_grey">#B8B8B8</color>
+    <color name="dark_grey">#838383</color>
     <color name="dull_blue">#4f4944</color>
     <color name="dull_yellow">#ffff84</color>
     <color name="pale">#fff9d0</color>
