--- a/app/src/main/res/layout/activity_email_sign_in.xml
+++ b/app/src/main/res/layout/activity_email_sign_in.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/background_gradient"
     android:layout_height="match_parent"
+    android:background="@drawable/background_gradient"
     tools:context=".EmailSignInActivity">
 
     <ImageView
@@ -34,7 +34,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />
 
     <EditText
         android:id="@+id/passwordEditText"
@@ -65,5 +65,17 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
+
+    <ImageView
+        android:id="@+id/showPasswordButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:paddingEnd="20px"
+        android:onClick="showPasswordClicked"
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
+        app:layout_constraintRight_toRightOf="@id/passwordEditText"
+        app:srcCompat="@drawable/show_password_icon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
