--- a/app/src/main/res/layout/activity_code_editor_tabbed.xml
+++ b/app/src/main/res/layout/activity_code_editor_tabbed.xml
@@ -20,11 +20,11 @@
             android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
-            app:tabSelectedTextColor="@color/bright_orange"
-            app:tabTextColor="@color/black"
+            app:tabSelectedTextColor="@color/black"
+            app:tabTextColor="@color/bright_orange"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary" />
+            android:background="@color/indigo" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
