Added highlighting feature with bottom nav. Need to fix heavy activities with fragments for bottom nav

--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -13,13 +13,12 @@
         android:layout_alignParentBottom="true"
         android:background="@color/black"
         app:itemBackground="@color/black"
-        app:itemIconTint="@android:color/white"
-        app:itemTextAppearanceActive="@style/Widget.BottomNavigationView"
-        app:itemTextColor="@color/light_grey"
+        app:itemIconTint="@drawable/nav_bar_selector"
+        app:itemTextColor="@drawable/nav_bar_selector"
+        app:theme="@style/Widget.BottomNavigationView"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu"
-        app:theme="@style/Widget.BottomNavigationView" />
+        app:menu="@menu/bottom_nav_menu"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
