--- a/app/src/main/res/layout/fragment_code_editor.xml
+++ b/app/src/main/res/layout/fragment_code_editor.xml
@@ -9,13 +9,13 @@
     <com.maharshiappdev.pseudogen.LineNumberedEditText
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/light_grey"
         android:gravity="top|start"
         android:inputType="textMultiLine"
         android:lines="25"
         android:scrollbars="vertical|horizontal"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/app_blue"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
+        android:background="@color/code_editor_dark"
+        android:textColor="@color/deep_sky_blue"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
