--- a/app/src/main/res/layout/activity_code_editor_tabbed.xml
+++ b/app/src/main/res/layout/activity_code_editor_tabbed.xml
@@ -20,8 +20,8 @@
             android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
-            app:tabSelectedTextColor="@color/black"
-            app:tabTextColor="@color/bright_orange"
+            app:tabSelectedTextColor="@color/bright_orange"
+            app:tabTextColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/indigo" />
@@ -34,10 +34,11 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/compileCodeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:background="@color/bright_orange"
+        app:srcCompat="@android:drawable/ic_media_play"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
