--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,7 @@
 
         <item name="android:windowBackground">@drawable/background_gradient</item>
         <item name="fontFamily">@font/audiowide</item>
+        <item name="android:editTextStyle">@style/Widget.AppCompat.NewEditText</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
