--- a/app/src/main/res/layout/fragment_code_list.xml
+++ b/app/src/main/res/layout/fragment_code_list.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/codeListFragment"
     tools:context=".CodeListFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="Hello Code List Frag" />
 
 </FrameLayout>
