--- a/app/src/main/res/layout/activity_code_editor_tabbed.xml
+++ b/app/src/main/res/layout/activity_code_editor_tabbed.xml
@@ -39,6 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:clickable="true"
         android:background="@color/bright_orange"
-        app:srcCompat="@android:drawable/ic_media_play"/>
+        android:backgroundTint="@color/indigo"
+        android:src="@drawable/compile_icon"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
