Changed Firebase integration. Saves data on save button clicked in tabbed activity. Removed extraneous icons

--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -40,7 +40,7 @@
             android:background="@color/bright_orange"
             android:backgroundTint="@color/indigo"
             android:clickable="true"
-            android:src="@drawable/add_new_icon">
+            android:src="@drawable/edit_new_icon">
         </com.google.android.material.floatingactionbutton.FloatingActionButton>
     </FrameLayout>
 
