--- a/app/src/main/res/layout/fragment_code_editor.xml
+++ b/app/src/main/res/layout/fragment_code_editor.xml
@@ -7,15 +7,17 @@
     tools:context=".CodeEditorFragment">
 
     <com.maharshiappdev.pseudogen.LineNumberedEditText
+        android:id="@+id/inputCodeEditText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="top|start"
         android:inputType="textMultiLine"
         android:lines="25"
         android:scrollbars="vertical|horizontal"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:hint="Add pseudocode here"
         android:background="@color/code_editor_dark"
-        android:textColor="@color/deep_sky_blue"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
