Fixed colors of toolbar and overall look and feel for orange and indigo

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,8 +42,8 @@
         android:fontFamily="@font/audiowide"
         android:text="pseudoGen"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="36sp"
+        android:textColor="@color/bright_orange"
+        android:textSize="34dp"
         app:layout_constraintBottom_toTopOf="@+id/loadingImageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
