--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="pale">#fff9d0</color>
     <color name="indigo">#4B0082</color>
     <color name="bright_orange">#FFA500</color>
+    <color name="dark_orange">#ff8c00</color>
 </resources>
