--- a/app/src/main/res/drawable/background_gradient.xml
+++ b/app/src/main/res/drawable/background_gradient.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:type="linear"
-        android:angle="90"
+        android:angle="45"
         android:gradientRadius="100%p"
-        android:startColor="#252257"
+        android:endColor="@color/bright_orange"
         android:centerColor="#582661"
-        android:endColor="#325760" />
+        android:startColor="#325760" />
 </shape>
