--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
+
+    <group android:checkableBehavior="single">
+        <item android:title="Log Out" android:id="@+id/nav_logOut"> </item>
+        <item android:title="Privacy" android:id="@+id/nav_Privacy"></item>
+        <item android:id="@+id/nav_rateApp" android:title="Rate App"></item>
+    </group>
 
 </menu>
